# nuget-inspector

./: .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile.ubuntu18  NOTICE  README-dev.rst  README.rst  azure-pipelines.yml  build.sh  release.sh  setup.cfg
docs/source/: conf.py  nuget-dependencies-design.rst  nuget-dependencies-design.txt
src/: Directory.Build.props  nuget-inspector.sln
src/nuget-inspector/: AssemblyInfoParser.cs  CliOptions.cs  Config.cs  Dependency.cs  DependencyResolution.cs  FrameworkFinder.cs  IDependencyResolver.cs  IScanner.cs  InputScanner.cs  LegacyPackagesConfigNoDupeResolver.cs  LegacyPackagesConfigResolver.cs  LegacyProjectJsonHandler.cs  LegacyProjectLockJsonHandler.cs  LockFileHandler.cs  LockFileHelper.cs  Models.cs  NugetApi.cs  NugetApiHelper.cs  NugetApiResolver.cs  NugetLogger.cs  NugetResolverHelper.cs  Options.cs  OutputFormatJson.cs  PackageReferenceResolver.cs  PackagesConfigHandler.cs  PackagesConfigHelper.cs  PackagesConfigProcessor.cs  PackagesConfigResolver.cs  Program.cs  ProjFileStandardPackageReferenceHandler.cs  ProjFileXmlParserPackageReferenceHandler.cs  ProjectAssetsJsonHandler.cs  ProjectAssetsJsonProcessor.cs  ProjectFileBaseProcessor.cs  ProjectFileProcessor.cs  ProjectFileScanner.cs  ProjectJsonProcessor.cs  ProjectLockJsonProcessor.cs  ProjectScanner.cs  ProjectXmlFallBackResolver.cs  (+6 more)
tests/: test_end_to_end_processing.py  testing_utils.py
tests/data/FileListAbsolute.txt1/: origin.ABOUT
tests/data/Packages.props1/: Packages.props
tests/data/Packages.props2/: Packages.props  origin.ABOUT
tests/data/conditions-unity/: origin.ABOUT
tests/data/csproj1/: origin.ABOUT
(+874 files in other folders)
