[bumpversion]
commit = False
tag = False
current_version = 0.7.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:file:build.sh]

[bumpversion:file:release.sh]

[bumpversion:file:src/nuget-inspector/Config.cs]

[bumpversion:file:src/nuget-inspector/nuget-inspector.csproj]

[metadata]
name = nuget-inspector-test-suite
license = Apache-2.0 AND MIT
description = A test suite for nuget-inspector
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/nuget-inspector
author = nexB. Inc. and others
author_email = info@aboutcode.org
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development
	Topic :: Utilities
keywords = 
	utilities
license_files = 
	apache-2.0.LICENSE
	NOTICE
	AUTHORS.rst
	CHANGELOG.rst

[options]
package_dir = 
	=tests
packages = find:
include_package_data = true
zip_safe = false
setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.8.*
install_requires = 
	pytest >= 6, != 7.0.0
	pytest-xdist >= 2
	commoncode
	aboutcode-toolkit >= 6.0.0
	black

[options.packages.find]
where = tests

[options.extras_require]
testing = 
	pytest >= 6, != 7.0.0
	pytest-xdist >= 2
	commoncode
	aboutcode-toolkit >= 6.0.0
	black
	bump2version
docs = 
	Sphinx >= 3.3.1
	sphinx-rtd-theme >= 0.5.0
	doc8 >= 0.8.1
